# WorkPoint3

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-compose.yml   makefile  pyproject.toml
back/: pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/config/: __init__.py  factory.py
front/: package-lock.json  package.json
frontend/: package-lock.json
frontend/src/components/: HelloWorld.vue
src/: main.py  run.py
src/routes/: point.py
src/templates/: main.html  point.html
