[tool.poetry]
name = "workpoint3"
version = "0.1.0"
description = ""
authors = ["What helps you live at work"]
license = "Unlicense "
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
