[tool.poetry]
name = "workpoint3-backend"
version = "0.1.0"
description = "Backend for app WorkPoint3"
authors = ["Tretyak0ff <evgentretyakoff@gmail.com>"]
license = "free"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
