[tool.poetry]
name = "workpoint3-backend"
version = "0.1.0"
description = "Backend for app WorkPoint3"
authors = ["Tretyak0ff <evgentretyakoff@gmail.com>"]
license = "free"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.1"
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
