[tool.poetry]
name = "workpoint3-backend"
version = "0.1.0"
description = "Backend for app WorkPoint3"
authors = ["Tretyak0ff <evgentretyakoff@gmail.com>"]
license = "free"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.1"
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"
sqlmodel = "^0.0.14"
asyncpg = "^0.29.0"
loguru = "^0.7.2"
environs = "^10.0.0"
pydantic-settings = "^2.1.0"
alembic = "^1.13.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
